--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "path": "^0.12.7"
   },
   "scripts": {
-    "start": "node server/index.js",
+    "start": "cd server && node index.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "dev": "nodemon index.js "
   },
