--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
+    "multer-gridfs-storage": "^5.0.1",
     "path": "^0.12.7"
   },
   "scripts": {
